<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flashlight</string>
    <string name="button_flashlight_on">On</string>
    <string name="button_flashlight_off">Off</string>
    <color name="title_color">#FFFFFF</color>
    <color name="white">#000000</color>
    <string name="label_warning">warning</string>
    <string name="label_police">police</string>
    <string name="label_strobe_screen">strobe screen</string>
    <string name="label_morse">morse code</string>
    <string name="label_strobe_light">strobe light</string>
    <string name="label_frequency">frequency</string>
    <string name="label_flashlight_screen">flashlight - screen</string>
    <string name="label_sos">S.O.S.</string>
    <string name="label_shake">Shake it</string>
    <string name="label_enter_mes">Enter message:</string>
    <string name="label_transl_mes">Translate message</string>
    <string name="label_start_lights">start lights</string>
    <string name="label_stop_lights">stop lights</string>
    <string name="label_bat_st">Battery status:</string>
    <string name="label_go_to_app">&#160;go to app&#160;</string>  
    <string name="label_busy_camera">Your camera is busy, perhaps another App or Widget uses it. Please turn off.</string>
    <string name="label_flash_time">flash time: </string>
</resources>