<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/appwidget_bg_focused" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >
            
          <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
           
            android:padding="10dp" >   
                     
            <ImageButton
                android:id="@+id/settingButton1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="left"
                android:text="ToggleButton"
                android:scaleType="fitCenter"
                android:background="@drawable/setting_icon"
                android:layout_alignParentLeft="true" />

            <ImageButton
                android:id="@+id/toggleButton1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/power_off"
                android:gravity="right"
                android:scaleType="fitCenter"
                android:text="ToggleButton"
                android:layout_alignParentRight="true" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_shake"
                android:textColor="@color/Orange"
                android:layout_marginLeft="15dp"
                android:typeface="serif"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="30dp" >

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/label_flashlight_screen"
                android:textColor="@color/Orange"
                android:background="@drawable/appwidget_bg_clickable" />

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingTop="3dp"
                android:text="@string/label_strobe_light"
                android:textColor="@color/Orange"
                android:background="@drawable/appwidget_bg_clickable" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingTop="3dp"
                android:text="@string/label_strobe_screen"
                android:textColor="@color/Orange"
                android:background="@drawable/appwidget_bg_clickable" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingTop="3dp"
                android:text="@string/label_morse"
                android:textColor="@color/Orange"
                android:background="@drawable/appwidget_bg_clickable" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingTop="3dp"
                android:text="@string/label_warning"
                android:textColor="@color/Orange"
                android:background="@drawable/appwidget_bg_clickable" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingTop="3dp"
                android:text="@string/label_police"
                android:textColor="@color/Orange"
                android:background="@drawable/appwidget_bg_clickable" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>