<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center"
  android:layout_margin="4dp"
  android:minHeight="60dp"
  android:minWidth="58dp"
 
  
  android:background="@drawable/appwidget_bg_focused">
 <!--  android:background="@drawable/appwidget_bg_clickable">--> 
 <!--   <TextView android:id="@+id/widget1label" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content"/>-->
<!-- 
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/appwidget_bg_clickable" />
 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="1dp"
             >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" 
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:textColor="@color/Red"
                android:textSize="7dp"/>

            <ImageButton
                android:id="@+id/imageButton2"
               	
                android:background="@drawable/power_off"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:scaleType="fitCenter"
                 />
<!--
              <Button
                android:id="@+id/buttonik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click Me!" /> -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="7dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_bat_st"
                android:textColor="@color/Red" />

            <TextView
                android:id="@+id/textViewBatterySt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="%" />

            <Button
                android:id="@+id/buttonGoToApp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/label_go_to_app"
                android:layout_gravity="bottom"
                android:background="@drawable/appwidget_bg_clickable"
                android:textColor="@color/Orange"
                
               
               
                 />

            <TextView
                android:id="@+id/textViewActualTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ddd"
                android:visibility="gone"
                 />

        </LinearLayout>

    </LinearLayout>
 
</LinearLayout>